fix router to postPublish n union the style of postPublish template

--- a/client/template/home/home.html
+++ b/client/template/home/home.html
@@ -18,7 +18,7 @@
             <div class="collapse navbar-collapse" id="nav-bar-list">
                 <ul class="nav navbar-nav">
                     <li><a href="#">学校</a></li>
-                    <li><a href="#">发布</a></li>
+                    <li><a href="/publish">发布</a></li>
                     <li><a href="/personal">个人中心</a></li>
                 </ul>
             </div>
