add postEdit template and ui event of postItem #bug can not find classList: should get the subNode instend of target directly

--- a/client/template/home/home.html
+++ b/client/template/home/home.html
@@ -26,7 +26,8 @@
     </nav>
     
         
-        
-      {{> yield}}
+      <div style="padding-top: 50px">  
+            {{> yield}}
+      </div>
     
 </template>
