--- a/client/template/postList/postList.html
+++ b/client/template/postList/postList.html
@@ -1,7 +1,8 @@
 <template name="postList">
 
-    
-    {{#each posts}}
-        {{post}}
-    {{/each}}
+    <div class="container">
+        {{#each posts}}
+            {{> post}}
+        {{/each}}
+    </div>
 </template>
