--- a/client/template/postModify/postModify.html
+++ b/client/template/postModify/postModify.html
@@ -1,4 +1,4 @@
-<template name="postPublish">
+<template name="postModify">
      <div class="container">
         <div class="panel panel-default">
             <div class="panel-body">
@@ -35,7 +35,7 @@
                     
                     <div class="btn-group btn-group-justified" role="group" aria-label="...">
                         <div class="btn-group" role="group">
-                            <button type="submit" class="btn btn-info" name="publish">发布</button>
+                            <button type="submit" class="btn btn-info" name="publish">修改</button>
                         </div>
                     </div>
 
