--- a/client/template/post/post.html
+++ b/client/template/post/post.html
@@ -1,14 +1,30 @@
 <template name="post">
-    <div class="panel panel-default">
-        <div class="panel-heading">
-            RMB: {{money}} 
-            <button type="button" class="close" aria-hidden="true"> &times;</button>
+    <div class="panel panel-default" name="postItem">
+        <div class="hide" id="postEditItem">
+            <div class="btn-group btn-group-justified" role="group" aria-label="...">
+                <div class="btn-group" role="group">
+                    <button type="button" class="btn btn-warning" id='backToList'>返回</button>
+                </div>
+                <div class="btn-group" role="group">
+                    <button type="button" class="btn btn-danger" id='postDelete'>删除</button>
+                </div>
+                 <div class="btn-group" role="group">
+                    <button type="button" class="btn btn-info" id='postModify'>修改</button>
+                </div>
+            </div>
         </div>
-        <div class="panel-body">
-            {{content}}
-        </div>
-        <div class="panel-footer">
-            {{publisher}}
+ 
+        <div class="show" id="postViewItem">
+            <div class="panel-heading">
+                RMB: {{info.money}} 
+                
+            </div>
+            <div class="panel-body">
+                {{info.content}}
+            </div>
+            <div class="panel-footer">
+                {{userId}}
+            </div>
         </div>
     </div>
 </template>
