--- a/client/template/post/post.html
+++ b/client/template/post/post.html
@@ -1,30 +1,33 @@
 <template name="post">
-    <div class="panel panel-default" name="postItem">
-        <div class="hide" id="postEditItem">
-            <div class="btn-group btn-group-justified" role="group" aria-label="...">
-                <div class="btn-group" role="group">
-                    <button type="button" class="btn btn-warning" id='backToList'>返回</button>
-                </div>
-                <div class="btn-group" role="group">
-                    <button type="button" class="btn btn-danger" id='postDelete'>删除</button>
-                </div>
-                 <div class="btn-group" role="group">
-                    <button type="button" class="btn btn-info" id='postModify'>修改</button>
-                </div>
-            </div>
+        <div class="panel panel-default">
+            
+                        <div class="panel-heading">
+                            <h4 class="panel-title">RMB: {{info.money}}
+                                <a data-toggle="collapse" href={{hrefOfPostId}} class="pull-right">
+                                    <span class="glyphicon glyphicon-chevron-down"></span> 
+                                </a>
+                            </h4>
+                        </div>
+                        <div id={{_id}} class="panel-collapse collapse">
+                            <ul class="list-group">
+                                <li class="list-group-item">
+                                    <div class="btn-group btn-group-justified" role="group" aria-label="...">
+                                        <div class="btn-group" role="group">
+                                            <button type="button" class="btn btn-danger" name='postDelete'>撤销发布</button>
+                                        </div>
+                                        <div class="btn-group" role="group">
+                                            <button type="button" class="btn btn-info" name='postModify'>修改发布</button>
+                                        </div>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="panel-body">
+                                {{info.content}}
+                            </div>
+                        <div class="panel-footer">
+                            {{userId}}
+                        </div>
         </div>
- 
-        <div class="show" id="postViewItem">
-            <div class="panel-heading">
-                RMB: {{info.money}} 
-                
-            </div>
-            <div class="panel-body">
-                {{info.content}}
-            </div>
-            <div class="panel-footer">
-                {{userId}}
-            </div>
-        </div>
-    </div>
+     
 </template>
